--- a/cb_info_db/cbar_db/templates/cbar_db/admin/participant.html
+++ b/cb_info_db/cbar_db/templates/cbar_db/admin/participant.html
@@ -85,7 +85,7 @@
             <div class="floating_block">
                 <strong> Medical Releases</strong><br />
                 {% for medical_release in medical_releases %}
-                <a href="{% url 'participant-record' participant.participant_id %}">
+                <a href="{% url 'report-med-release' participant.participant_id  medical_release.date.year medical_release.date.month medical_release.date.day%}">
                     {{ medical_release.date }}
                 </a><br />
                 {% endfor %}
