--- a/cb_info_db/cbar_db/templates/cbar_db/forms/public/application.html
+++ b/cb_info_db/cbar_db/templates/cbar_db/forms/public/application.html
@@ -6,7 +6,7 @@
             {{ error_text }}
         </p></strong>
     {% endif %}
-    <form action="{% url 'public_form_application %'}" method="post">
+    <form action="{% url 'public-form-application' %}" method="post">
         {% csrf_token %}
         <p>
             Name: {{ form.name }}
@@ -80,10 +80,10 @@
             <span class="error_message">
                 {{ form.signature.errors.as_text }}
             </span>
-            Date: {{ form.date }}
+            <!--Date: {{ form.date }}
             <span class="error_message">
                 {{ form.date.errors.as_text }}
-            </span>
+            </span>-->
         </p>
         <input type="Submit" value="Submit" />
     </form>
