[Re #21] Cleaned up 'report_med_release.html'

--- a/cb_info_db/cbar_db/templates/cbar_db/admin/reports/report_med_release.html
+++ b/cb_info_db/cbar_db/templates/cbar_db/admin/reports/report_med_release.html
@@ -72,7 +72,9 @@
         </p>
         <p>
             <strong>Any physical or mental issues affecting riding?</strong>
-            {{ medical_info.get_physical_or_mental_issues_affecting_display }}
+            {{ medical_info.get_physical_or_mental_issues_affecting_riding_display }}
+            <strong>Description:</strong>
+            {{ medical_info.physical_or_mental_issues_affecting_riding_description }}
         </p>
         <p>
             <strong>
