--- a/cb_info_db/cbar_db/templates/cbar_db/admin/participant.html
+++ b/cb_info_db/cbar_db/templates/cbar_db/admin/participant.html
@@ -85,17 +85,17 @@
             <div class="floating_block">
                 <strong> Medical Releases</strong><br />
                 {% for medical_release in medical_releases %}
-                <a href="{% url 'report-med-release' participant.participant_id  medical_release.date.year medical_release.date.month medical_release.date.day%}">
-                    {{ medical_release.date }}
-                </a><br />
+                    <a href="{% url 'report-med-release' participant.participant_id  medical_release.date.year medical_release.date.month medical_release.date.day%}">
+                        {{ medical_release.date }}
+                    </a><br />
                 {% endfor %}
             </div>
             <div class="floating_block">
                 <strong>Liability Releases</strong><br />
                 {% for liability_release in liability_releases %}
-                <a href="{% url 'participant-record' participant.participant_id %}">
-                    {{ liability_release.date }}
-                </a><br />
+                    <a href="{% url 'report-liability' participant.participant_id liability_release.date.year liability_release.date.month liability_release.date.day %}">
+                        {{ liability_release.date }}
+                    </a><br />
                 {% endfor %}
             </div>
             <div class="floating_block">
