--- a/cb_info_db/cbar_db/templates/cbar_db/forms/public/application.html
+++ b/cb_info_db/cbar_db/templates/cbar_db/forms/public/application.html
@@ -66,9 +66,14 @@
             <span class="error_message">
                 {{ form.phone_home.errors.as_text }}
             </span>
-            Cell/Work Phone: {{ form.phone_cell_work }}
+            Cell Phone: {{ form.phone_cell }}
             <span class="error_message">
-                {{ form.phone_cell_work.errors.as_text }}
+                {{ form.phone_cell.errors.as_text }}
+            </span>
+            <br />
+            Work Phone: {{ form.phone_work }}
+            <span class="error_message">
+                {{ form.phone_work.errors.as_text }}
             </span>
             <br />
             E-Mail Address: {{ form.email }}
