--- a/cb_info_db/cbar_db/templates/cbar_db/forms/public/application.html
+++ b/cb_info_db/cbar_db/templates/cbar_db/forms/public/application.html
@@ -81,14 +81,14 @@
                 {{ form.email.errors.as_text }}
             </span>
             <br />
-            Signature: {{ form.signature }}
+            <!--Signature: {{ form.signature }}
             <span class="error_message">
                 {{ form.signature.errors.as_text }}
             </span>
             Date: {{ form.date }}
             <span class="error_message">
                 {{ form.date.errors.as_text }}
-            </span>
+            </span>-->
         </p>
         <input type="Submit" value="Submit" />
     </form>
