[Re #15] Added 'Donate' link to 'template.html'

--- a/cb_info_db/cbar_db/templates/cbar_db/template.html
+++ b/cb_info_db/cbar_db/templates/cbar_db/template.html
@@ -8,6 +8,7 @@
         <div id="header" class="content_container">
             <a href="/"><h1>C-Bar Information Database</h1></a>
             <div class="nav">
+                <a class="button" href="{% url 'public-form-donation' %}">Donate</a>
                 <a class="button" href="{% url 'index-public-forms' %}">Public Forms</a>
                 <a class="button" href="">Private Forms</a>
                 <a class="button" href="">Administration</a>
