[re 15] Donation form cleanup and finished

--- a/cb_info_db/cbar_db/templates/cbar_db/forms/donation.html
+++ b/cb_info_db/cbar_db/templates/cbar_db/forms/donation.html
@@ -8,6 +8,7 @@
     {% endif %}
     <form action="{% url 'public-form-donation' %}" method="post">
         {% csrf_token %}
+        <div id="DonationChoices">
         <p>
             What would you like to donate too? {{ form.donation_type }}
             <span class="error_message">
@@ -15,11 +16,22 @@
             </span>
         </p>
         <p>
-            Adopt a Horse:
+            Adopt a Horse: {{ form.amount }}
+            <span class="error_message">
+                {{ form.donation_type.error.as_text }}
+            </span>
         </p>
         <p>
-            Adopt a Participant:
+            Adopt a Participant: {{  form.amount }}
+            <span class="error_message">
+                {{ form.donation_type.error.as_text }}
+            </span>
         </p>
         <p>
-            Flat Money Donation:
+            Flat Money Donation: {{ form.amount }}
+            <span class="error_message">
+                {{ form.donation_type.error.as_text }}
+            </span>
+        </p>
+    </div>
 {% endblock %}
