[re 15] Added Submit button to donation page.

--- a/cb_info_db/cbar_db/templates/cbar_db/forms/donation.html
+++ b/cb_info_db/cbar_db/templates/cbar_db/forms/donation.html
@@ -34,4 +34,7 @@
             </span>
         </p>
     </div>
+    <div id="SubmitButton">
+        <input type="Submit" value="Submit">
+    </div>
 {% endblock %}
