[Re #21] Updated participant record page to display cell and work phone numbers

--- a/cb_info_db/cbar_db/templates/cbar_db/admin/participant.html
+++ b/cb_info_db/cbar_db/templates/cbar_db/admin/participant.html
@@ -34,10 +34,10 @@
                 <strong>Home Phone</strong><br /> {{ participant.phone_home }}
             </div>
             <div class="floating_block">
-                <strong>Cell Phone</strong><br /> <!-- phone_cell_work needs split into two fields -->
+                <strong>Cell Phone</strong><br /> {{ participant.phone_cell }}
             </div>
             <div class="floating_block">
-                <strong>Work Phone</strong><br /> <!-- phone_cell_work needs split into two fields -->
+                <strong>Work Phone</strong><br /> {{ participant.phone_work }}
             </div>
             <div class="floating_block">
                 <strong>Email</strong><br /> <a href="mailto</strong><br />{{ participant.email }}">
