[Re #21] WIP: Implementing Seizure Evaluation report page

--- a/cb_info_db/cbar_db/templates/cbar_db/forms/public/seizure.html
+++ b/cb_info_db/cbar_db/templates/cbar_db/forms/public/seizure.html
@@ -90,15 +90,15 @@
             </span>
         </p>
         <p>
-            Seizure activity indicators: (aura, behaviors or
-            manifestations of oncoming seizure activity)
+            Seizure activity indicators (aura, behaviors or
+            manifestations of oncoming seizure activity):
             {{ form.seizure_indicators }}
             <span class="error_message">
                 {{ form.seizure_indicators.errors.as_text }}
             </span>
         </p>
         <p>
-            After Affect: {{ form.after_effect }}
+            After Effect: {{ form.after_effect }}
             <span class="error_message">
                 {{ form.after_effect.errors.as_text }}
             </span>
