--- a/cb_info_db/cbar_db/templates/cbar_db/admin/participant.html
+++ b/cb_info_db/cbar_db/templates/cbar_db/admin/participant.html
@@ -83,10 +83,18 @@
                 {% endfor %}
             </div>
             <div class="floating_block">
-                <strong> Medical Releases</strong><br />
+                <strong>Medical Releases</strong><br />
                 {% for medical_release in medical_releases %}
                     <a href="{% url 'report-med-release' participant.participant_id  medical_release.date.year medical_release.date.month medical_release.date.day%}">
                         {{ medical_release.date }}
+                    </a><br />
+                {% endfor %}
+            </div>
+            <div class="floating_block">
+                <strong>Seizure Evaluations</strong><br />
+                {% for seizure_eval in seizure_evals %}
+                    <a href="{% url 'report-seizure' participant.participant_id  seizure_eval.date.year seizure_eval.date.month seizure_eval.date.day%}">
+                        {{ seizure_eval.date }}
                     </a><br />
                 {% endfor %}
             </div>
