--- a/cb_info_db/cbar_db/templates/cbar_db/forms/donation/donation_participant.html
+++ b/cb_info_db/cbar_db/templates/cbar_db/forms/donation/donation_participant.html
@@ -1,16 +1,16 @@
 {% extends "cbar_db/template.html" %}
 {% block body %}
-    <h1> Donation page </h1>
+    <h1>Adopt a Participant</h1>
     {% if error_text %}
         <p><strong>
             {{ error_text }}
         </strong></p>
     {% endif %}
-    <form action="{% url 'public-form-donation' %}" method="post">
+    <form action="{% url 'donation-participant' %}" method="post">
         {% csrf_token %}
         <div>
         <p>
-            Adopt a Participant: {{  form.amount }}
+            Amount you are donating: ${{  form.amount }}
             <span class="error_message">
                 {{ form.donation_type.error.as_text }}
             </span>
@@ -27,8 +27,9 @@
                 {{ form.donor_email.error.as_text }}
             </span>
 
-    </div>
-    <div id="SubmitButton">
-        <input type="Submit" value="Submit">
-    </div>
+        </div>
+        <div id="SubmitButton">
+            <input type="Submit" value="Submit">
+        </div>
+    </form>
 {% endblock %}
