[Re #33] Changed 'Medication.duration_taken' fields to 'Medication.reason_taken'

--- a/cb_info_db/cbar_db/templates/cbar_db/admin/reports/report_med_release.html
+++ b/cb_info_db/cbar_db/templates/cbar_db/admin/reports/report_med_release.html
@@ -58,8 +58,8 @@
             <p>
                 <strong>Medication Name:</strong>
                  {{ medication.medication_name }}<br />
-                <strong>Duration Taken:</strong>
-                 {{ medication.duration_taken }}<br />
+                <strong>Reason Taken:</strong>
+                 {{ medication.reason_taken }}<br />
                 <strong>Frequency Taken:</strong>
             </p>
         {% endfor %}
