--- a/cb_info_db/cbar_db/templates/cbar_db/admin/reports/report_seizure.html
+++ b/cb_info_db/cbar_db/templates/cbar_db/admin/reports/report_seizure.html
@@ -75,7 +75,7 @@
             <p>
                 <strong>Medication Name:</strong>
                  {{ medication.medication_name }}
-                <strong>Duration:</strong> {{ medication.duration_taken }}
+                <strong>Reason Taken:</strong> {{ medication.reason_taken }}
                 <strong> Frequency:</strong> {{ medication.frequency }}
             </p>
         {% endfor %}
