--- a/cb_info_db/cbar_db/templates/cbar_db/forms/public/seizure.html
+++ b/cb_info_db/cbar_db/templates/cbar_db/forms/public/seizure.html
@@ -112,9 +112,9 @@
             <span class="error_message">
                 {{ form.medication_one_name.errors.as_text }}
             </span><br />
-            Duration: {{ form.medication_one_duration }}
+            Reason Taken: {{ form.medication_one_reason }}
             <span class="error_message">
-                {{ form.medication_one_duration.errors.as_text }}
+                {{ form.medication_one_reason.errors.as_text }}
             </span>
             Frequency: {{ form.medication_one_frequency }}
             <span class="error_message">
@@ -126,9 +126,9 @@
             <span class="error_message">
                 {{ form.medication_two_name.errors.as_text }}
             </span><br />
-            Duration: {{ form.medication_two_duration }}
+            Reason Taken: {{ form.medication_two_reason }}
             <span class="error_message">
-                {{ form.medication_two_duration.errors.as_text }}
+                {{ form.medication_two_reason.errors.as_text }}
             </span>
             Frequency: {{ form.medication_two_frequency }}
             <span class="error_message">
@@ -140,9 +140,9 @@
             <span class="error_message">
                 {{ form.medication_three_name.errors.as_text }}
             </span><br />
-            Duration: {{ form.medication_three_duration }}
+            Reason Taken: {{ form.medication_three_reason }}
             <span class="error_message">
-                {{ form.medication_three_duration.errors.as_text }}
+                {{ form.medication_three_reason.errors.as_text }}
             </span>
             Frequency: {{ form.medication_three_frequency }}
             <span class="error_message">
