--- a/cb_info_db/cbar_db/templates/cbar_db/forms/donation/donation_horse.html
+++ b/cb_info_db/cbar_db/templates/cbar_db/forms/donation/donation_horse.html
@@ -8,8 +8,26 @@
     {% endif %}
     <form action="{% url 'donation-horse' %}" method="post">
         {% csrf_token %}
+        <div>
+        <p>
+            Amount you are donating: ${{  form.amount }}
+            <span class="error_message">
+                {{ form.donation_type.error.as_text }}
+            </span>
+        </p>
+        <p>
+            Your Name: {{ form.donor_name }}
+            <span class="error_message">
+                {{ form.donor_name.error.as_text }}
+            </span>
+        </p>
+        <p>
+            Your Email address:{{ form.donor_email }}
+            <span class="error_message">
+                {{ form.donor_email.error.as_text }}
+            </span>
 
-        <!-- FORM THINGS GO HERE -->
+        </div>
 
         <input type="Submit" value="Submit">
     </form>
