[re #31] Fixed the issue with missing donor email and name fields in adopt a horse donation page

--- a/cb_info_db/cbar_db/templates/cbar_db/forms/donation/donation_horse.html
+++ b/cb_info_db/cbar_db/templates/cbar_db/forms/donation/donation_horse.html
@@ -16,15 +16,15 @@
             </span>
         </p>
         <p>
-            Your Name: {{ form.donor_name }}
+            Your Name: {{ form.name }}
             <span class="error_message">
-                {{ form.donor_name.error.as_text }}
+                {{ form.name.error.as_text }}
             </span>
         </p>
         <p>
-            Your Email address:{{ form.donor_email }}
+            Your Email address:{{ form.email }}
             <span class="error_message">
-                {{ form.donor_email.error.as_text }}
+                {{ form.email.error.as_text }}
             </span>
 
         </div>
