[Re #35] Added state field to models.py and updated views, forms and templates accordingly.
NOTE: New Python dependency in 'requirements.txt'

--- a/cb_info_db/cbar_db/templates/cbar_db/admin/participant.html
+++ b/cb_info_db/cbar_db/templates/cbar_db/admin/participant.html
@@ -50,7 +50,7 @@
                 <strong>Address</strong><br />
                 {{ participant.address_street }}<br />
                 {{ participant.address_city }}<br />
-                {{ participant.address_zip }}<br />
+                {{ participant.address_state }} {{ participant.address_zip }}
             </div>
             <div class="floating_block">
                 <strong>Minor Status</strong><br /> {{ participant.get_minor_status_display }}
