--- a/cb_info_db/cbar_db/templates/cbar_db/forms/donation/donation_participant.html
+++ b/cb_info_db/cbar_db/templates/cbar_db/forms/donation/donation_participant.html
@@ -16,13 +16,13 @@
             </span>
         </p>
         <p>
-            Your Name: {{ form.donor_name }}
+            Your Name: {{ form.name }}
             <span class="error_message">
                 {{ form.donor_name.error.as_text }}
             </span>
         </p>
         <p>
-            Your Email address:{{ form.donor_email }}
+            Your Email address:{{ form.email }}
             <span class="error_message">
                 {{ form.donor_email.error.as_text }}
             </span>
