[Re #32] Implemented monetary donation frontend.

--- a/cb_info_db/cbar_db/templates/cbar_db/forms/donation/donation_monetary.html
+++ b/cb_info_db/cbar_db/templates/cbar_db/forms/donation/donation_monetary.html
@@ -8,9 +8,27 @@
     {% endif %}
     <form action="{% url 'donation-monetary' %}" method="post">
         {% csrf_token %}
-
-        <!-- FORM THINGS GO HERE -->
-
-        <input type="Submit" value="Submit">
+        <div>
+        <p>
+            Amount you are donating: ${{  form.amount }}
+            <span class="error_message">
+                {{ form.donation_type.error.as_text }}
+            </span>
+        </p>
+        <p>
+            Your Name: {{ form.donor_name }}
+            <span class="error_message">
+                {{ form.donor_name.error.as_text }}
+            </span>
+        </p>
+        <p>
+            Your Email address:{{ form.donor_email }}
+            <span class="error_message">
+                {{ form.donor_email.error.as_text }}
+            </span>
+        </div>
+        <div id="SubmitButton">
+            <input type="Submit" value="Submit">
+        </div>
     </form>
 {% endblock %}
