--- a/cb_info_db/cbar_db/templates/cbar_db/forms/private/intake_assessment_form.html
+++ b/cb_info_db/cbar_db/templates/cbar_db/forms/private/intake_assessment_form.html
@@ -2,10 +2,10 @@
 {% block body %}
     <h1>Rider Intake Assessment</h1>
     <h2>Select Participants</h2>
-    <form action="{% url 'private-form-intake-assessment-select-participants' %}" method="post">
+    <form action="{% url 'private-form-intake-assessment' %}" method="post">
         {% csrf_token %}
-        {% for field in form %}
-            {{ field }} {{ field.errors.as_text }}<br />
+        {% for participant in selected_participants %}
+            {{ participant }} <br />
         {% endfor %}
         <input type="submit" value="Submit" />
     </form>
