[Re #48] WIP: Implementing Rider Intake Assessment form

--- a/cb_info_db/cbar_db/templates/cbar_db/forms/private/intake_assessment_participants.html
+++ b/cb_info_db/cbar_db/templates/cbar_db/forms/private/intake_assessment_participants.html
@@ -2,11 +2,14 @@
 {% block body %}
     <h1>Rider Intake Assessment</h1>
     <h2>Select Participants</h2>
+    <p>
+        Please select the participant(s) you would like to evaluate:
+    </p>
     <form action="{% url 'private-form-intake-assessment-select-participants' %}" method="post">
         {% csrf_token %}
         {% for field in form %}
             {{ field }} {{ field.errors.as_text }}<br />
         {% endfor %}
-        <input type="submit" value="Submit" />
+        <input type="submit" value="Continue" />
     </form>
 {% endblock %}
